--- a/index.html
+++ b/index.html
@@ -14,16 +14,34 @@
         <div class="banner">
             <div class="banner-content">
                 <h3>Welcome To</h3>
-                 <h1><span class="flower">F</span>lower <span class="flower">S</span>hop</h1>
-               <p class="paragraph"></p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
-               <button class="btn-primary">Shop Now</button>
+                  <h1><span class="flower">F</span>lower <span class="flower">S</span>hop</h1>
+                   <p class="paragraph"></p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+              <button class="btn-primary">Shop Now</button>
             </div>
-            <img class="header-picture" src="images/pngwing 10.png" alt="">
-
+          <img class="header-picture" src="images/pngwing 10.png" alt="">
         </div>
-
     </header>
+
     <main>
+        <div class="sec">
+            <h2>Our Featured Flowers</h2>
+            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+        </div> 
+
+        <div class="pink-continer">
+        <div class="pink-flower01">
+            <img class="pic01" src="images/pngwing 6.png" alt="">
+            <a href="">Pink Flower Tree</a>
+        </div>
+        <div class="pink-flower02">
+            <img class="pic02" src="images/pngwing 5.png" alt="">
+            <a href="">Pink Flower Tree</a>
+        </div>
+        <div class="pink-flower03">
+            <img class="pic03" src="images/pngwing 7.png" alt="">
+            <a href="">Pink Flower Tree</a>
+        </div>
+        </div>
 
     </main>
     <footer>
