--- a/index.html
+++ b/index.html
@@ -42,6 +42,23 @@
             <a href="">Pink Flower Tree</a>
         </div>
         </div>
+     
+
+
+        <div class="icon">
+            <div>
+            <img src="images/Group 57.png" alt="">
+            <p>Same Day Delivery. Click & Collect.</p>
+        </div>
+        <div>
+            <img src="images/Group 58.png" alt="">
+            <p>Fresh Flowers. Local Growers.</p>
+        </div>
+        <div>
+            <img src="images/Group 59.png" alt="">
+            <p>24/7 Free Support.</p>
+        </div>
+        </div>
 
     </main>
     <footer>
