--- a/index.html
+++ b/index.html
@@ -60,6 +60,18 @@
         </div>
         </div>
 
+        <div class="header">
+        <div class="banner">
+            <div class="banner-content">
+                <h3>Hot Deal ! Sale Up To 25% Off</h3>
+                 <p class="paragraph"></p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+              <button class="btn-primary">Sign Up</button>
+            </div>
+          <img class="header-picture" src="images/pngwing 8.png" alt="">
+        </div>
+    </div>
+
+
     </main>
     <footer>
 
