--- a/index.html
+++ b/index.html
@@ -89,6 +89,19 @@
     </div>
 
 
+    <div class="last-img">
+       
+        <img src="images/Rectangle 9.png" alt="">
+        <div class="img-text">
+            <h1>Get The Latest Deals</h1>
+            <p class="img-text02">$30 coupon for first shopping</p>
+            <input class="email" type="text" id="email" name="email" placeholder="Enter your email here...."> 
+            <button class="btn-primary02">Subscribe</button>
+        </div>
+      
+       </div>
+
+
     </main>
     <footer>
 
